[package]
name = "stm32f446_updtfw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32f446_updtfw"
bench = false
doctest = false
test = false

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.15"
rustBoot-hal ={path = "../../../hal",default-features = false,features = ["stm32f446"]}
panic-probe = { version = "0.3.0" }
rustBoot-update = {path = "../../../update", features = ["stm32f446"]}

# board-specific features
[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f446"]
