[package]
name = "stm32f469_bootfw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32f469_bootfw"
bench = false
doctest = false
test = false

[dependencies]
# defmt = {version = "0.3.1", optional = true}
# defmt-rtt = {version = "0.3.2", optional = true}
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rustBoot-hal ={path = "../../../hal",default-features = false,features = ["stm32f469"]}
panic-probe = { version = "0.2.0" }
rustBoot-update = {path = "../../../update", features = ["stm32f469"]}

# board-specific features
[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f469"]

[features]
default = []
